# ExplainaBoard

./: .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .travis.yml  CODEOWNERS  LICENSE  MANIFEST.in  README.md  json2csv.py  log.res  requirements.txt  run_sql.sh  setup.cfg  setup.py  task_ner.sql  version.py
.github/: pull_request_template.md
analyzer/: bar_chart.py  draw_hist.py  report-tc.json
cicd/: gen_requirements_lock.sh  run_integration_tests.sh  run_unit_tests.sh
database/: task_ner.sql  task_ner_error.sql.REMOVED.git-id
dataset/: README.md
docs/: add_custom_features.md  add_new_features.md  add_new_formats.md  add_new_tasks.md  cli_examples.md  cli_interface.md  concepts_about_system_analysis.md  existing_supports.md  final_check_for_contribution.md  get_evaluation_results_programatically.md  multilingual_multitask_evaluation.md  programmatic_interface.md  supported_metrics.md  supported_tasks.md  task_argument_pair_extraction.md  task_argument_pair_identification.md  task_aspect_based_sentiment_classification.md  task_conditional_generation.md  task_extractive_qa.md  task_extractive_qa_squad.md  task_file_format_summarization.md  task_file_formats.md  task_grammatical_error_correction.md  task_hellaswag.md  task_kg_link_tail_prediction.md  task_knowledge_graph.md  task_meta_evaluation.md  task_qa_multiple_choice.md  task_qa_multiple_choices.md  task_qa_open_domain.md  task_qa_table_text_hybrid.md  task_summarization.md  task_text_classification.md  task_text_pair_classification.md  task_text_regression.md  visualization.md
explainaboard/: __init__.py  config.py  constants.py  convert.py  data_utils.py  error_analysis.py  explainaboard_main.py  feature.py  info.py  info_test.py  metric.py  table_schema.py  tasks.py
fig/: demo-v2.png.REMOVED.git-id  demo.gif.REMOVED.git-id
integration_tests/: __init__.py  api_test.py  argument_pair_extraction_test.py  aspect_based_sentiment_classification_test.py  bucket_case_test.py  cli_test.py  cloze_hint_test.py  cloze_multiple_choice_test.py  dynamic_hits_metric_test.py  example_code_test.py  extractive_qa_test.py  grammar_error_correction_test.py  interpretations_test.py  kg_link_tail_prediction_test.py  loaders_test.py  machine_translation_test.py  meta_eval_nlg_test.py  meta_eval_wmt_da_test.py  metric_test.py  multilingual_multitask_test.py  ner_test.py  nlg_meta_eval_test.py  preprocessor_test.py  qa_multiple_choice_test.py  qa_open_domain_test.py  qa_table_text_hybrid_test.py  resources_test.py  span_utils_test.py  summarization_test.py  system_details_test.py  table_schema_test.py  text_classification_test.py  text_pair_classification_test.py  text_to_sql_test.py  tokenizers_test.py  utils.py  word_segmentation_test.py
interpret_eval/: __init__.py  interpret_eval_main.py
output_format/: README.md  sample-absa.tsv  sample-ner.tsv  sample-tc.tsv
src/: errorAnalysis.py  ner_overall_f1.py  utils.py
task-absa/: run_tensorEval.sh  (+1 more)
(+884 files in other folders)
