[metadata]
name = explainaboard
version = attr: version.__version__
description = Explainable Leaderboards for Natural Language Processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neulab/ExplainaBoard
author = Pengfei Liu
license = MIT License
classifiers =
    Intended Audience :: Developers
    Topic :: Text Processing
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = True
install_requires =
    datalabs>=0.4.9
    eaas>=0.3.9
    lexicalrichness!=0.1.6
    matplotlib
    nltk>=3.2
    numpy
    sacrebleu
    scikit-learn
    scipy
    seqeval
    spacy
    tqdm
    wheel

[options.extras_require]
dev = pre-commit

[options.package_data]
explainaboard.resources = *.json

[options.entry_points]
console_scripts =
    explainaboard = explainaboard.explainaboard_main:main

[flake8]
application-import-names = explainaboard
exclude = __pycache__, datasets
extend-ignore = E203, W503
filename = ./explainaboard/*.py, ./setup.py
max-line-length = 88

[isort]
filter_files = true
force_sort_within_sections = true
multi_line_output = 3
order_by_type = false
profile = black
src_paths = explainaboard
